// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectEventPreview /> should render correctly 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent>
      <Date
        date="2030-03-10 00:00:00"
      />
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      >
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<ProjectEventPreview /> should render correctly no passed event 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent>
      <Date
        date="2020-03-10 00:00:00"
      />
      <InlineList
        margin={true}
      />
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      >
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<ProjectEventPreview /> should render correctly passed event 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent>
      <Date
        date="2021-03-10 00:00:00"
      />
      <div
        className="past-container"
      >
        <span
          className="separator"
        >
          -
        </span>
        passed-singular
      </div>
      <InlineList
        margin={true}
      />
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      >
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<ProjectEventPreview /> should render correctly when guest enabled 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent>
      <Date
        date="2030-03-10 00:00:00"
      />
      <InlineList
        margin={true}
      >
        <li>
          <Label
            color="#007bff"
            fontSize={10}
          >
            registration-required
          </Label>
        </li>
      </InlineList>
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      >
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<ProjectEventPreview /> should render correctly when no date 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent />
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      >
        <Relay(TagCity)
          address={
            Object {
              " $fragmentRefs": null,
              "__typename": "GoogleMapsAddress",
            }
          }
          size="16px"
        />
      </EventPreviewstyle__TagsList>
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;

exports[`<ProjectEventPreview /> should render correctly when no googleMapsAddress 1`] = `
<EventPreviewstyle__EventPreviewContainer
  isProject={true}
>
  <Body>
    <EventPreviewstyle__TitleContainer>
      <Icon
        color="#007bff"
        name="eventPhysical"
        size={17}
      />
      <Title
        tagName="h3"
      >
        <a
          href="#"
          title="Lorem ipsum dolor sit amet, consectetur adipiscing."
        >
          <Truncate
            ellipsis="…"
            lines={2}
            trimWhitespace={false}
            width={0}
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing.
          </Truncate>
        </a>
      </Title>
    </EventPreviewstyle__TitleContainer>
    <EventPreviewstyle__HeadContent>
      <Date
        date="2030-03-10 00:00:00"
      />
    </EventPreviewstyle__HeadContent>
    <EventPreviewstyle__Content>
      <EventPreviewstyle__TagsList
        vertical={true}
      />
    </EventPreviewstyle__Content>
  </Body>
</EventPreviewstyle__EventPreviewContainer>
`;
